node id generation from node list or id key

--- a/templates/zoo.cfg.j2
+++ b/templates/zoo.cfg.j2
@@ -1,18 +1,3 @@
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
-# 
-#    http://www.apache.org/licenses/LICENSE-2.0
-# 
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 # the directory where the snapshot is stored.
 dataDir={{ zookeeper_data_dir }}
 # the port at which the clients will connect
@@ -21,8 +6,19 @@ clientPort={{ zookeeper_client_port }}
 maxClientCnxns={{ zookeeper_maxClientCnxns }}
 
 #----------------------Zookeeper Cluster---------------
+
 {% for host in zookeeper_ensemble %}
-server.{{ hostvars[host]['zookeeper_node_id'] }}={{ host }}:{{ zookeeper_connect_port}}:{{zookeeper_election_port }}
+server.
+  {%- if zookeeper_node_id_from == 'node'    -%}
+  {{ hostvars[host]['zookeeper_node_id'] }}
+  {%- elif zookeeper_node_id_from == 'key'   -%}
+  {{ host.id }}
+  {%- elif zookeeper_node_id_from == 'index' -%}
+  {{ loop.index }}
+  {%- endif %}
+=
+{%- if host.name is defined %}{{ host.name }}{% else %}{{ host}}{% endif %}
+:{{ zookeeper_connect_port}}:{{zookeeper_election_port }}
 {% endfor %}
 
 tickTime={{ zookeeper_tickTime }}
